--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=checkpoint3mc
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskdb
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+springdoc.swagger-ui.path=/swagger-ui.html
