--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<spring.profiles.active>test</spring.profiles.active>
 	</properties>
 	<dependencies>
 		<dependency>
