--- a/.github/workflows/3-release.yml
+++ b/.github/workflows/3-release.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   create-release:
     runs-on: ubuntu-latest
+    
+    permissions: 
+      contents: write 
+    
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
